--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Project name
 spring.application.name=BE
 
-spring.profiles.active=${ACTIVE}
+spring.profiles.active=local
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
