--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cardpickdb?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=${root}
-spring.datasource.password=${Ic228100**}
+spring.datasource.username=root
+spring.datasource.password=Ic228100**
