--- a/src/main/resources/templates/application.properties
+++ b/src/main/resources/templates/application.properties
@@ -1,7 +1,7 @@
 # Project name
 spring.application.name=BE
 
-spring.profiles.active=local
+spring.profiles.active=${ACTIVE}
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
@@ -18,3 +18,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#Gpt
+openai.model=gpt-3.5-turbo
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.api.key=${openai.secret-key}
